# djultra

./: AGENTS.md  base.py  checks.py  fields.py  logging.py  middleware.py  pyproject.toml  readme.md  serializers.py  settings.py
admin/: action_result_reporter.py  base.py
management/commands/: dev.py
src/: apps.py  authentication.py  fastmanage_daemon_backup.py  logging.py  middleware.py  settings.py  tests.py  urls.py  views.py
src/admin/: __init__.py  install.py
src/management/commands/: dev.py  fastmanage_daemon.py  fastmanage_patch.py
src/migrations/: 0001_initial.py  0002_contactmessage.py  0003_delete_contactmessage_remove_personloginuser_person_and_more.py
src/models/: __init__.py  base.py  contactmessage.py  person.py
src/services/: email.py
src/templates/: index.html
src/templates/admin/: repeat_last_action_change_list.html
src/utils/: config_loader.py
templates/admin/: base.html
utils/: config_loader.py
